<resources>
    <string name="app_name">TREEO</string>
    <string name="facebook_app_id" translatable="false">915429019225102</string>
    <string name="logout_button_text">Log Out</string>
    <string name="user_token" translatable="false">User Token</string>
    <string name="user_id" translatable="false">User Id</string>
    <string name="user_name" translatable="false">User Name</string>
    <string name="user_phone_number" translatable="false">User Number</string>
    <string name="device_info_saved" translatable="false">Device Info Saved</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="country">Country</string>
    <string name="text_choose_language">Choose Your Language First</string>
    <string name="hint_choose_language">Choose the TREEO APP language. You can always change it in settings.</string>
    <string name="english" translatable="false">English</string>
    <string name="luganda" translatable="false">Luganda</string>
    <string name="bahasa" translatable="false">Bahasa</string>
    <string name="spanish" translatable="false">Spanish</string>
    <string name="first_time_user" translatable="false">first_time_user</string>
    <string name="your_phone_number">Type your phone number</string>
    <string name="pick_your_country">Pick your country</string>
    <string name="text_continue">CONTINUE</string>
    <string name="resend_the_passcode">RESEND THE PASSCODE</string>
    <string name="passcode_delay_text">It might take a couple of minutes to receive the passcode</string>
    <string name="camera_button_description" translatable="false">This is the camera button</string>
    <string name="title_home">Home</string>
    <string name="title_guide">Guide</string>
    <string name="title_learn">Learn</string>
    <string name="title_profile">Profile</string>
    <string name="lorem_ipsum" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="text_back">BACK</string>
    <string name="otp_pass_code_message">Confirm the passcode sent to</string>
    <string name="get_started">GET STARTED</string>
    <string name="text_create_a_better_income">Create a Better World and Grow your income by planting trees</string>
    <string name="text_treeo_goal">We provide seedlings, educate and help farmers to create a sustainable income by planting trees.</string>
    <string name="gdpr_conditions" translatable="true"> GDPR Conditions</string>
    <string name="selected_language" translatable="false">Selected Language</string>
    <string name="sample_activity_title" translatable="false">Sample activity title</string>
    <string name="sample_form_title_text">Part 1 - Form</string>
    <string name="sample_duration" translatable="false">5 MINS</string>
    <string name="start_text">START</string>
    <string name="sample_activity_code" translatable="false">Activity Code</string>
    <string name="placeholder_dashes" translatable="false">___</string>
    <string name="text_completed">COMPLETED</string>
    <string name="text_edit">EDIT</string>
    <string name="label_retake">RETAKE</string>
    <string name="label_retake_photo">RETAKE PHOTO</string>
    <string name="check_photo_txt">If the photo is blurry or simply unclear, you can retake. Otherwise you can continue.</string>
    <string name="check_photo_validity">Is this photo clear?</string>
    <string name="photo">photo</string>
    <string name="take_photo">Take a picture of your land from each of its corners</string>
    <string name="close">close</string>
    <string name="specify_your_land_by_using_a_camera">Specify your land by using a camera</string>
    <string name="have_all_your_field_in_order">Have all your field in order</string>
    <string name="capture_your_trees_including_the_gps">Capture your trees including the GPS</string>
    <string name="turn_on_camera">Turn on Camera</string>
    <string name="before_you_start_prepare_those_3_things">Before you start prepare these 3 things:</string>
    <string name="instructions_preview">You should have these things with you to avoid having to come back from the field</string>
    <string name="_1_full_phone_battery">1. Full phone battery</string>
    <string name="to_be_prepared_for_any_case">To be prepared for any case</string>
    <string name="_2_a_digging_tool">2. A digging tool</string>
    <string name="to_photograph_the_ground_soil">To photograph the ground soil</string>
    <string name="_3_around_25_minutes">3. Around 25 minutes</string>
    <string name="according_to_your_land_size">According to your land size</string>
    <string name="start_land_photos">Start land photos</string>
    <string name="step_1_land_photos">Step 1: Land Photos</string>
    <string name="to_determine_how_many_pictures_you_will_take">To determine how many pictures you will take.</string>
    <string name="step_2_soil_photo">Step 2: Soil Photo</string>
    <string name="dig_instructions_text">Now dig a hole in the ground and take a photo of your soil</string>
    <string name="finish_land_specification">Finish land specification</string>
    <string name="instruction_check_photo">If the photo is blurry or simply unclear, you can retake it. Otherwise you can finish the land specification</string>
    <string name="is_this_soil_photo_clear">Is this soil photo clear</string>
    <string name="how_many_corners_does_your_land_have">How many corners does your land have?</string>
    <string name="label_offline_information">You are offline now. Don\'t worry, the app works offline. In case of data collection connect to the Internet to send us data.</string>
    <string name="label_offline_mode">You are using offline mode.</string>
    <string name="label_data_to_send">You have data to send. Connect to the internet to upload it.</string>
    <string name="label_go_to_settings">GO TO SETTINGS</string>
    <string name="label_unfinished_activity">You have an unfinished activity. Click Continue to finish it now.</string>
    <string name="label_please_stay_connected">Please stay connected…</string>
    <string name="label_uploading_data_now">You are uploading your data now. Give it a few seconds to finish</string>
    <string name="label_all_data_uploaded">You have successfully uploaded all your data.</string>
    <string name="offline_info_dismissed" translatable="false">offline information dismissed</string>
    <string name="last_data_sync_was_done">Last data sync was done %s</string>
    <string name="to_sync_">\u0020 data item to Sync</string>
    <string name="to_sync">\u0020 data items to Sync</string>
    <string name="app_status">App status</string>
    <string name="sync_data">SYNC DATA</string>
    <string name="you_are_online_now">You are online now</string>
    <string name="all_functions_and_courses_are_available_now">All functions and courses are available now</string>
    <string name="all_your_data_is_synced">All your data is synced</string>
    <string name="sync_in_progress">SYNC in progress</string>
    <string name="all_functions_and_courses_are_being_uploaded_now">All functions and courses are being uploaded now</string>
    <string name="you_have_still_have_pending_data_to_sync">Don\'t worry your data will be uploaded.\nMake sure your network is good and battery</string>
    <string name="you_are_offline_now">You are offline now</string>
    <string name="don_t_worry_app_works_fine_offline_too">Don\'t worry, app works fine offline too</string>
    <string name="my_treeo">My TREEO</string>
    <string name="what_is_needed_to_be_done">What is needed to be done.</string>
    <string name="user_greeting">%s</string>
    <string name="label_exit" translatable="false">EXIT</string>
    <string name="message_getting_location">Getting location</string>
    <string name="message_check_settings">We failed to get your location, please check your settings.</string>
    <string name="continue_to_photos">continue to photos</string>
    <string name="treeo_guide">TREEO Guide</string>
    <string name="looks_like_you_ve_run_out_of_n_planned_activities">Looks like you\'ve run out of \n planned activities</string>
    <string name="see_all">See all activities</string>
    <string name="what_s_new">What\'s New</string>
    <string name="you_have_completed_the_land_specification">You have completed the land specification</string>
    <string name="continue_to_dashboard">continue to dashboard</string>
    <string name="what_is_your_main_motivation_in_treeo">What is your main motivation in TREEO?</string>
    <string name="choose_one_or_more_relevant_options">Choose one or more relevant options</string>
    <string name="earn_better_income">Earn better income</string>
    <string name="learn_valuable_forestry_skills">Learn valuable forestry skills</string>
    <string name="have_firewood">Have firewood</string>
    <string name="improve_the_environment">Improve the environment</string>
    <string name="step_1_how_to_plant_and_maintain_trees">1. Learn how to plant and maintain trees</string>
    <string name="learn_how_to_plant_trees_in_the_best_way_and_how_to_maintain_trees_to_increase_the_value_of_yout_timber">Learn how to plant trees in the best way and how to maintain trees to increase the value of your timber</string>
    <string name="step_2_know_the_value_of_your_trees">2. Know the value of your trees</string>
    <string name="get_to_know_the_value_of_your_timber_with_our_app_and_sell_your_timber_for_a_fair_market_price">Get to know the value of your timber with our app and sell your timber for a fair market price.</string>
    <string name="our_main_goal_is_to_preserve_the_environment_and_with_your_help_we_can_make_it_happen_together">Our main goal is to preserve the environment and with your help we can make it happen together.</string>
    <string name="step_4_support_your_neigbourhood">4. Support your neigbourhood</string>
    <string name="trees_bring_water_to_your_village_give_you_shade_provide_benefits_to_the_soil_for_growing_crops_and_many_other_benefits">Trees bring water to your village, give you shade, provide benefits to the soil for growing crops and many other benefits.</string>
    <string name="login_into_treeo">Login into TREEO</string>
    <string name="question_1_this_is_a_sample_question">Question 1: This is a sample Question?</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="default_greeting">Hi</string>
    <string name="welcome_to_treeo">welcome to TREEO!</string>
    <string name="tree_planting_level">Beginner</string>
    <string name="phone_number2" translatable="false">+256 78945431</string>
    <string name="today">TODAY</string>
    <string name="define_your_land">Define Your Land</string>
    <string name="land_photos">"Land Photos \u0020"</string>
    <string name="measure">Measure</string>
    <string name="by_continuing_you_agree_to_the_treeo">By Continuing, you agree to the TREEO</string>
    <string name="go_to_profile">Go to profile</string>
    <string name="empty_state">Empty State</string>
    <string name="nothing_growing_in_here_for_now">Nothing growing in here for now!</string>
    <string name="there_are_now_activities_for_you_at_the_moment_you_can_either_wait_or_contact_our_help_center">There are now activities for you at the moment. You can either wait or contact our Help Center</string>
    <string name="after_upload_info">After uploading the data, you will know if you can join the project.</string>
    <string name="register_login">Register/Login</string>
    <string name="info_unfinished_activity">You have an unfinished Tree Measurement, by starting a new one you will lose the previous data. Would you like to continue where you finished?</string>
    <string name="label_start_new">START NEW</string>
    <string name="label_continue">YES, CONTINUE</string>
</resources>