<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="48dp"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ngh_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/empty_state"
        android:textAlignment="center"
        android:textAppearance="@style/HeadlineTheme"
        android:textColor="@color/design_default_color_error"
        android:layout_marginTop="64dp"
        android:textSize="36sp" />

    <ImageView
        android:id="@+id/ngh_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/photo"
        android:scaleType="fitCenter"
        android:src="@drawable/cactus" />

    <TextView
        android:id="@+id/ngh_sub_title"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand"
        android:textFontWeight="700"
        android:textSize="18sp"
        android:text="@string/nothing_growing_in_here_for_now"
        android:textColor="@color/app_green" />

    <TextView
        android:id="@+id/ngh_description"
        android:layout_marginTop="16dp"
        android:textFontWeight="500"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:text="@string/there_are_now_activities_for_you_at_the_moment_you_can_either_wait_or_contact_our_help_center"
        android:textColor="@color/black" />

</LinearLayout>